<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/coordTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/coordinates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adressTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:text="@string/adress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateLocationTextView" />

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:text="@string/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adressTextView" />

    <TextView
        android:id="@+id/countryTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:text="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

    <TextView
        android:id="@+id/updateLocationTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/updated_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>